CV and Headshot added.

--- a/CV.html
+++ b/CV.html
@@ -20,7 +20,7 @@
     </nav>
     <div class="container">
       <h2>CURRICULUM VITAE</h2>
-      <p>Click <a href="#" target="_blank">here</a> to see my current CV.</p>
+      <p>Click <a href="Kieran Britt CV Summer 2021.docx" download="Kieran Britt CV">here</a> to see my current CV.</p>
     </div>
 
     <div class="btn-toggle-nav" onclick="toggleNav()">
