Reaearch page modified

--- a/Research.html
+++ b/Research.html
@@ -22,8 +22,13 @@
     <div class="container">
       <h2>Research</h2>
       <div class="research">
-        <p>Lorem ipsum dolor sit amet, consecte</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore ma</p>
+        <p>Most of my current and past work is in epistemology. I'm currently interested in questions regarding the nature of evidence and evidential support, higher-order evidence, and the nature of epistemic norms. While I don't have any current work that I'm ready to share right now, I'll be posting drafts on this site once my work is ready.</p>
+        <br>
+        <p>My MA thesis was on the normativity of logic. There, I argued, contra some philosophers, that logic is normative for both belief and for reasoning. I then explored some of the consequences of that. For those interested, the thesis is posted below.</p>
+      </div>
+      <h3 class="past_work">Past Work</h3>
+      <div class="past_work_links">
+        <a href="The Epistemic Normativity of Logic_Kieran Britt MA Thesis Reformatted.pdf" download="The Epistemic Normativity of Logic Kieran Britt">MA Thesis - The Epistemic Normativity of Logic</a>
       </div>
 
       <div class="btn-toggle-nav" onclick="toggleNav()">
