--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     </nav>
     <div class="flex-container">
       <div class="about">
-        <h2>About me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h2>About Me</h2>
+        <p>I'm a graduate student in philosophy at Princeton University. Before coming to Princeton, I did an MA in philosophy at the University of Colorado, Boulder, where I also did my BA in philosophy and linguistics. My main areas of interest are in epistemology, philosophy of language, and formal semantics.</p>
+        <br>
+        <p>If you want to reach me, you can send me an email at kb9558@princeton.edu. </p>
       </div>
       <div id="headshot">
         <img src="img/Professional Headshot.jpg" alt="Kieran Britt">
